add two button interface.

--- a/gamePigDice.html
+++ b/gamePigDice.html
@@ -9,6 +9,18 @@
   <meta charset="utf-8"/>
 </head>
 <body>
-
+  <div class="container">
+    <h1>Pig Dice</h1>
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <div id="controls">
+          <button class="roll">ROLL THE D6</button>
+          <button class="hold">HOOOOOOLD</button>
+        </div>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
 </body>
 </html>
