Significant reorganization. Mostly in the JS

--- a/gamePigDice.html
+++ b/gamePigDice.html
@@ -17,6 +17,7 @@
         <div id="controls">
           <button class="roll">ROLL THE D6</button>
           <button class="hold">HOOOOOOLD</button>
+          <button class="cheat">Cheat</button>
           <br /><br />
           <div id="theDie">
             <span id="dieFace"><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /><br/><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /><br /><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /></span>
@@ -24,6 +25,9 @@
         </div>
         <div id="endgame">
           <span id="victor"></span>
+        </div>
+        <div id="pregame">
+          <button class="start">Challenge the EVIL ROBO-PIG!</button>
         </div>
       </div>
       <div class="col-md-5">
