--- a/gamePigDice.html
+++ b/gamePigDice.html
@@ -31,7 +31,9 @@
         </div>
       </div>
       <div class="col-md-5">
-        <h4>This is where round-by-round will go</h4>
+        <h4>Results:</h4>
+        <ul id="turns">
+        </ul>
       </div>
     </div>
   </div>
