--- a/gameTicTacToe.html
+++ b/gameTicTacToe.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>TITLE OF THE PAGE</title>
+  <title>Ticky Tacky Toe</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="js/TEMP.js"></script>
   <meta charset="utf-8"/>
 </head>
 <body>
-
+  <center>
+  <table id="game">
+    <tr class="tictachorizontal">
+      <td id="NW">X</td>
+      <td id="NC" class="tictacvertical">X</td>
+      <td id="NE" class="tictacvertical">O</td>
+    </tr>
+    <tr class="tictachorizontal">
+      <td id="CW">O</td>
+      <td id="CC" class="tictacvertical">O</td>
+      <td id="CE" class="tictacvertical">X</td>
+    </tr>
+    <tr>
+      <td id="SW">O</td>
+      <td id="SC" class="tictacvertical">X</td>
+      <td id="SE" class="tictacvertical">O</td>
+    </tr>
+  </table>
+</center>
 </body>
 </html>
