add very rough Tic Tac Toe visuals and back end.

--- a/gameTicTacToe.html
+++ b/gameTicTacToe.html
@@ -12,19 +12,19 @@
   <center>
   <table id="game">
     <tr class="tictachorizontal">
-      <td id="NW">X</td>
-      <td id="NC" class="tictacvertical">X</td>
-      <td id="NE" class="tictacvertical">O</td>
+      <td id="NW"></td>
+      <td id="NC" class="tictacvertical"></td>
+      <td id="NE" class="tictacvertical"></td>
     </tr>
     <tr class="tictachorizontal">
-      <td id="CW">O</td>
-      <td id="CC" class="tictacvertical">O</td>
-      <td id="CE" class="tictacvertical">X</td>
+      <td id="CW"></td>
+      <td id="CC" class="tictacvertical"></td>
+      <td id="CE" class="tictacvertical"></td>
     </tr>
     <tr>
-      <td id="SW">O</td>
-      <td id="SC" class="tictacvertical">X</td>
-      <td id="SE" class="tictacvertical">O</td>
+      <td id="SW"></td>
+      <td id="SC" class="tictacvertical"></td>
+      <td id="SE" class="tictacvertical"></td>
     </tr>
   </table>
 </center>
