add options dropdown to PigDice

--- a/gamePigDice.html
+++ b/gamePigDice.html
@@ -12,12 +12,22 @@
   <div class="container">
     <h1>Pig Dice</h1>
     <div class="row">
-      <div class="col-md-2"></div>
+      <div class="col-md-2">
+        <div class="optionContainer">
+          Options
+          <div id="options">
+            <p class="item" id="cheat">Cheat</p>
+            <p class="item" id="2die">Two Dice (not implemented)</p>
+            <p class="item" id="lvl1">AI Level 1 (not implemented)</p>
+            <p class="item" id="lvl2">AI Level 2 (not implemented)</p>
+            <p class="item" id="noAI">Human v. Human (not implemented)</p>
+          </div>
+        </div>
+      </div>
       <div class="col-md-5">
         <div id="controls">
           <button class="roll">ROLL THE D6</button>
           <button class="hold">HOOOOOOLD</button>
-          <button class="cheat">Cheat</button>
           <br /><br />
           <div id="theDie">
             <span id="dieFace"><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /><br/><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /><br /><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /></span>
