Implemented rudimentary 2 dice and AI level select

--- a/gamePigDice.html
+++ b/gamePigDice.html
@@ -23,8 +23,8 @@
           <div id="options">
             <p class="item" id="cheat">Cheat</p>
             <p class="item" id="2die">Two Dice (not implemented)</p>
-            <p class="item" id="lvl1">AI Level 1 (not implemented)</p>
-            <p class="item" id="lvl2">AI Level 2 (not implemented)</p>
+            <p class="item" id="lvl1">AI Easy (not implemented)</p>
+            <p class="item" id="lvl2">AI Normal (not implemented)</p>
             <p class="item" id="noAI">Human v. Human (not implemented)</p>
           </div>
         </div>
