Fix TTT. Add navigation and home page.

--- a/gameTicTacToe.html
+++ b/gameTicTacToe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>Ticky Tacky Toe</title>
+  <title>Game Zone - Ticky Tacky Toe</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
@@ -12,6 +12,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3">
+        <div class="optionContainer">
+          Navigation
+          <div id="navigation">
+            <p class="item"><a href="index.html">Home</a></p>
+            <p class="item"><a href="gamePigDice.html">Pig Dice</a></p>
+          </div>
+        </div>
+         | 
         <div class="optionContainer">
           Options
           <div id="options">
@@ -59,7 +67,7 @@
       <div class="col-md-4">
         <center>
           <br />
-          <p><strong>X:</strong> <span id="humoscore">0</span> <strong>O:</strong> <span id="roboscore">0</span></p>
+          <p><strong>X:</strong> <span id="xscore">0</span> <strong>O:</strong> <span id="oscore">0</span></p>
         </center>
       </div>
       <div class="col-md-4"></div>
