--- a/gamePigDice.html
+++ b/gamePigDice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>Pig Dice</title>
+  <title>Game Zone - Pig Dice</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
@@ -13,7 +13,15 @@
     <div class="row">
       <div class="col-md-3">
         <div class="optionContainer">
-          Options  |  
+          Navigation
+          <div id="navigation">
+            <p class="item"><a href="index.html">Home</a></p>
+            <p class="item"><a href="gameTicTacToe.html">Tic Tac Toe</a></p>
+          </div>
+        </div>
+         | 
+        <div class="optionContainer">
+          Options
           <div id="options">
             <p class="item" id="2die">Play With Two Dice</p>
             <p class="item" id="noAI">Play Human v. Human (not implemented)</p>
@@ -21,7 +29,8 @@
             <p class="item" id="lvl">Toggle Easy AI</p>
           </div>
         </div>
-        <div id="rulesContainer">
+         | 
+        <div class="optionContainer">
           Rules
           <div id="rules">
             <div id="oneDiceRules">
@@ -54,8 +63,8 @@
           <p><strong>Human:</strong> <span id="humoscore">0</span> <strong>Robo Pig</strong> <span id="roboscore">0</span></p>
         </div>
       </div>
+      <div class="col-md-3"></div>
     </div>
-    <div class="col-md-3"></div>
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-4">
