--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <title>TITLE OF THE PAGE</title>
+  <title>Game Zone - Home</title>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
@@ -9,6 +9,38 @@
   <meta charset="utf-8"/>
 </head>
 <body>
-
+  <!DOCTYPE html>
+  <html lang="en-US">
+  <head>
+    <title>Game Zone - Home</title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <meta charset="utf-8"/>
+  </head>
+  <body>
+    <div class="title">
+      <h1>Nick's Game Zone</h1>
+      <br />
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-5">
+          <img src="img/home.png" />
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-4">
+          <ul id="mainNav">
+            <li id="pigLink"><strong><a href="gamePigDice.html">Pig Dice</a></strong></li>
+            <li id="ticLink"><strong><a href="gameTicTacToe.html">Tic Tac Toe</a></strong></li>
+          </ul>
+        </div>
+        <div class="col-md-1"></div>
+      </div>
+    </div>
+  </body>
+  </html>
 </body>
 </html>
