add reset function, fix several bugs.

--- a/gameTicTacToe.html
+++ b/gameTicTacToe.html
@@ -68,7 +68,12 @@
         <center>
           <br />
           <p><strong>X:</strong> <span id="xscore">0</span> <strong>O:</strong> <span id="oscore">0</span></p>
-        </center>
+          <div id="playAgain">
+            <button class="start">Play Again?</button>
+          </div>
+          </center>
+      </div>
+      <div>
       </div>
       <div class="col-md-4"></div>
     </div>
