lvl 2 ai complete.

--- a/gameTicTacToe.html
+++ b/gameTicTacToe.html
@@ -24,7 +24,7 @@
           Options
           <div id="options">
             <p class="item" id="easyAI">Toggle Easy AI Player</p>
-            <p class="item" id="hardAI">Toggle Hard AI Player (N/A)</p>
+            <p class="item" id="hardAI">Toggle Hard AI Player</p>
           </div>
         </div>
       </div>
