lay groundwork for better pig dice AI

--- a/gamePigDice.html
+++ b/gamePigDice.html
@@ -23,10 +23,11 @@
         <div class="optionContainer">
           Options
           <div id="options">
+            <p class="item" id="lvl0">Human v. Human</p>
+            <p class="item" id="lvl1">Easy AI</p>
+            <p class="item" id="lvl2">Hard AI</p>            
             <p class="item" id="2die">Play With Two Dice</p>
-            <p class="item" id="noAI">Play Human v. Human (not implemented)</p>
             <p class="item" id="cheat">Toggle Loaded Dice</p>
-            <p class="item" id="lvl">Toggle Easy AI</p>
           </div>
         </div>
          | 
