added time delay and blank starting die, advised by playtesters.

--- a/gamePigDice.html
+++ b/gamePigDice.html
@@ -70,14 +70,14 @@
       <div class="col-md-2"></div>
       <div class="col-md-4">
         <div id="controls" class="title">
-          <button class="roll">ROLL</button>
-          <button class="hold">HOLD</button>
+          <button id="roll" class="playerControls">ROLL</button>
+          <button id="hold" class="playerControls">HOLD</button>
           <br /><br />
           <div class="theDie" id="theFirstDie">
-            <span id="dieFace"><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /><br/><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /><br /><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /></span>
+            <span id="dieFace"><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><br/><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><br /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /></span>
           </div>
           <div class="theDie" id="theSecondDie">
-            <span id="dieFace"><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /><br/><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /><br /><img src="img/pip.gif" /><img src="img/nopip.gif" /><img src="img/pip.gif" /></span>
+            <span id="dieFace"><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><br/><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><br /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /></span>
           </div>
           <div>
             <br />
