--- a/gamePigDice.html
+++ b/gamePigDice.html
@@ -5,7 +5,7 @@
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="js/scriptsPig.js"></script>
   <meta charset="utf-8"/>
 </head>
 <body>
@@ -74,10 +74,10 @@
           <button id="hold" class="playerControls">HOLD</button>
           <br /><br />
           <div class="theDie" id="theFirstDie">
-            <span id="dieFace"><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><br/><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><br /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /></span>
+            <span id="dieFace"><img src="img/nopip.gif" />click<img src="img/nopip.gif" /><br/><img src="img/nopip.gif" />'Roll'<img src="img/nopip.gif" /><br /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /></span>
           </div>
           <div class="theDie" id="theSecondDie">
-            <span id="dieFace"><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><br/><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><br /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /></span>
+            <span id="dieFace"><img src="img/nopip.gif" />c'mon<img src="img/nopip.gif" /><br/><img src="img/nopip.gif" />do it!<img src="img/nopip.gif" /><br /><img src="img/nopip.gif" /><img src="img/nopip.gif" /><img src="img/nopip.gif" /></span>
           </div>
           <div>
             <br />
