--- a/gameTicTacToe.html
+++ b/gameTicTacToe.html
@@ -5,7 +5,7 @@
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
-  <script src="js/TEMP.js"></script>
+  <script src="js/scriptTTT.js"></script>
   <meta charset="utf-8"/>
 </head>
 <body>
@@ -68,7 +68,7 @@
         <center>
           <br />
           <p><strong>X:</strong> <span id="xscore">0</span> <strong>O:</strong> <span id="oscore">0</span></p>
-          <div id="playAgain">
+          <div id="endgame">
             <button class="start">Play Again?</button>
           </div>
           </center>
